# radar

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.consumer  Dockerfile.cron  Dockerfile.go  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  coingecko.py  coingecko_example.json  coingecko_full_example.json  docker-compose-infra.yaml  docker-compose.yaml  docker-compose.yml  drivers.crontab  env.example  go.mod  go.sum  main.py  marktes_usd.json  pyproject.toml  ramzinex.json  start_cron.sh  test.py
cmd/consumer/: main.go
cmd/crawler/: main.go
cmd/debug/: main.go
cmd/ingester/: main.go
cmd/migrate/: main.go
cmd/scraper/: main.go
configs/: clickhouse-backup.xml  configs.go
drivers/: Dockerfile.bitpin  Dockerfile.nobitex  Dockerfile.ramzinex  Dockerfile.tabdeal  Dockerfile.wallex  FAULT_TOLERANCE.md  bitpin.py  docker-compose.yml  env.example  gowallex  helper.py  wallex.py
drivers/binpin/: main.go
drivers/bitpin/: .dockerignore  docker-compose.yml  env.example  go.mod  go.sum  main.go
drivers/nobitex/: example.json  go.mod  go.sum  main.go
drivers/pkg/: go.mod
drivers/ramzinex/: example.json  go.mod  main.go
drivers/tabdeal/: example.json  go.mod  main.go
drivers/wallex/: .dockerignore  Makefile  README-GO.md  README.md  env.example  go.mod  main.go
internal/consumer/: consumer.go
internal/crawler/: common.go  common_test.go  http.go  http_test.go  interface.go  websocket.go
kafka/: client.py  consumer.py  consumer_depth.py  consumer_test.py
python_scripts/: check_kafka.py  jalali_calender.py
utils/: utils.go
(+125 files in other folders)
